--- a/checklist/manifest.json
+++ b/checklist/manifest.json
@@ -3,12 +3,12 @@
   "name": "Checklist",
   "short_name": "Checklist",
   "icons": [{
-        "src": "img/checklist.png",
+        "src": "/checklist/img/checklist.png",
          "sizes": "192x192",
         "type": "image/png"
       }],
-  "scope": "/",
-  "start_url": "/index.html",
+  "scope": "/checklist/",
+  "start_url": "index.html",
   "display": "standalone",
   "orientation": "portrait",
   "background_color": "#3f51b5",
