--- a/checklist/manifest.json
+++ b/checklist/manifest.json
@@ -3,7 +3,7 @@
   "name": "Checklist",
   "short_name": "Checklist",
   "icons": [{
-        "src": "https://192.168.0.7/bellini.github.io/checklist/img/checklist.png?v=1",
+        "src": "https://bellini.github.io/checklist/img/checklist.png?v=1",
         "sizes": "192x192",
         "type": "image/png"
       }],
