--- a/checklist/manifest.json
+++ b/checklist/manifest.json
@@ -7,8 +7,8 @@
         "sizes": "192x192",
         "type": "image/png"
       }],
-  "scope": "checklist/",
-  "start_url": "index.html",
+  "scope": "./",
+  "start_url": "./",
   "display": "standalone",
   "orientation": "portrait",
   "background_color": "#3f51b5",
